WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
178819
[MSE][GStreamer] Fix hang on clearing/destroying AppendPipeline
https://bugs.webkit.org/show_bug.cgi?id=178819
Summary
[MSE][GStreamer] Fix hang on clearing/destroying AppendPipeline
Enrique Ocaña
Reported
2017-10-25 11:40:24 PDT
A deadlock may occur when UI thread tries to clear pipeline in AppendPipeline::clearPlayerPrivate() while parser thread tries to change pipeline state to pause holding the stream lock in AppendPipeline::connectDemuxerSrcPadToAppsinkFromAnyThread(). This issue has been fixed downstream in
https://github.com/WebPlatformForEmbedded/WPEWebKit/pull/392
Attachments
Patch
(1.93 KB, patch)
2017-10-25 11:45 PDT
,
Enrique Ocaña
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrique Ocaña
Comment 1
2017-10-25 11:45:43 PDT
Created
attachment 324859
[details]
Patch
WebKit Commit Bot
Comment 2
2017-10-26 03:31:42 PDT
Comment on
attachment 324859
[details]
Patch Clearing flags on attachment: 324859 Committed
r224012
: <
https://trac.webkit.org/changeset/224012
>
WebKit Commit Bot
Comment 3
2017-10-26 03:31:44 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2017-11-15 12:45:25 PST
<
rdar://problem/35568087
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug